# diag-db-checker

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml  deploy.yml
data/: sample_bad.json  sample_ok.json  sample_warning.json
include/: checker.h
reports/: report.json
src/: checker.cpp  main.cpp
tests/: test_checker.cpp
